more bug fixs, social z-index

--- a/assets/css/desktop.css
+++ b/assets/css/desktop.css
@@ -3,12 +3,19 @@
     .header {
       position: fixed;
       top: 0;
+
     }
   
     .header.active .header-container {
       width: 100%;
       max-width: 1050px;
+     padding-block: 0;
     } 
+
+    .header-container {
+      padding-block: 0;
+      padding: 5px 10px;
+    }
   
     .actionMenu {
       right: 1px;
